--- a/index.css
+++ b/index.css
@@ -4,8 +4,8 @@
     border: 2px solid black;
 }
 .Logo{
-    height:200px;
-    width: 200px;
+    height:160px;
+    width: 160px;
 }
 .nav-item{
     padding: 10px;
@@ -22,35 +22,56 @@
 }
 .ResCard{
     width: 200px;
-    height: 300px;
+    border-radius: 5px;
+    box-shadow: -1px 5px 10px 5px rgba(42, 42, 42, 0.2);
     padding: 10px;
-    background-color: beige;
-    text-align: center;
+    margin: 20px;
     cursor: pointer;
+    background-color: #f0eeee;
 }
-.ResCard:hover{
-    border: 1px solid black;
-}
-.Search{
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    font-style: italic;
-    width: 600px;
-    height: 40px;
-    margin: 0 auto;
-}
-.ResImg{
-    width: 180px;
-    height: 140px;
-}
-.Res-Container{
+
+.shimmer{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
+.shimmer-card{
+    width: 200px;
+    height: 300px;
+    border-radius: 5px;
+    box-shadow: -1px 5px 10px 5px rgba(42, 42, 42, 0.2);
+    padding: 10px;
+    margin: 20px;
+    cursor: pointer;
+    background-color: #f0f0f0;
+}
+.ResCard:hover{
+    border: 1px solid black;
+}
+
+.ResImg{
+    width: 100%;
+    height: 140px;
+}
+
+.btnLogin{
+    width: 100px;
+    height: 70px;
+    font-size: 25px;
+}
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+   
+}
+.cuisines{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
 /*
 *config driven UI
 */
