--- a/index.css
+++ b/index.css
@@ -1,77 +1,3 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    border: 2px solid black;
-}
-.Logo{
-    height:160px;
-    width: 160px;
-}
-.nav-item{
-    padding: 10px;
-    font-size: 35px;
-}
-.nav-item>ul{
-    display: flex;
-    list-style-type: none;
-}
-
-.nav-item>ul>li{
-    padding: 10px;
-    margin: 10px;
-}
-.ResCard{
-    width: 200px;
-    border-radius: 5px;
-    box-shadow: -1px 5px 10px 5px rgba(42, 42, 42, 0.2);
-    padding: 10px;
-    margin: 20px;
-    cursor: pointer;
-    background-color: #f0eeee;
-}
-
-.shimmer{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-.shimmer-card{
-    width: 200px;
-    height: 300px;
-    border-radius: 5px;
-    box-shadow: -1px 5px 10px 5px rgba(42, 42, 42, 0.2);
-    padding: 10px;
-    margin: 20px;
-    cursor: pointer;
-    background-color: #f0f0f0;
-}
-.ResCard:hover{
-    border: 1px solid black;
-}
-
-.ResImg{
-    width: 100%;
-    height: 140px;
-}
-
-.btnLogin{
-    width: 100px;
-    height: 70px;
-    font-size: 25px;
-}
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-   
-}
-.cuisines{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-/*
-*config driven UI
-*/
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
